// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSkeletonStyle() should return correct css for opts: { theme: 'dark' } 1`] = `
{
  "@keyframes skeletonAnimation": {
    "from": {
      "backgroundPositionX": "100%",
    },
    "to": {
      "backgroundPositionX": "-100%",
    },
  },
  "animation": "skeletonAnimation var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1) infinite",
  "background": "#212225 linear-gradient(to right, transparent 0%, #1a1b1e 25%, transparent 50%) 0 0 / 200% 100%",
  "borderRadius": "4px",
  "display": "block",
}
`;

exports[`getSkeletonStyle() should return correct css for opts: { theme: 'light' } 1`] = `
{
  "@keyframes skeletonAnimation": {
    "from": {
      "backgroundPositionX": "100%",
    },
    "to": {
      "backgroundPositionX": "-100%",
    },
  },
  "animation": "skeletonAnimation var(--p-transition-duration, 0.6s) cubic-bezier(0.25,0.1,0.25,1) infinite",
  "background": "#EEEFF2 linear-gradient(to right, transparent 0%, #f7f7f7 25%, transparent 50%) 0 0 / 200% 100%",
  "borderRadius": "4px",
  "display": "block",
}
`;
